got spacing fixed with animated text

--- a/styles.scss
+++ b/styles.scss
@@ -55,6 +55,7 @@ body {
     color: white;
     font-style: normal;
     font-weight: lighter;
+    display: list-item;
   }
 
   .small-2 {
